configurações na pagina produtos

--- a/produtos.html
+++ b/produtos.html
@@ -71,7 +71,7 @@
                     <div class="col-lg-7 col-md-12 align-self-center text-dark">
                         <p style="width: 100%;font-size: 18px; text-align: start; ">Confeccionados em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Fabricados em impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.
                         </p>
-                        <a href="" class="btn btn-outline-danger">Saiba Mais</a>
+                        <a href="" class="btn btn-danger border-1 mb-md-5 mb-sm-5">Saiba Mais</a>
                     </div>
                 </div>
 
@@ -82,14 +82,14 @@
                     <div class="col-lg-7 col-md-12 align-self-center text-dark">
                         <p style="width: 100%;font-size: 18px; text-align: start; ">Os Painéis Frontais são produzidos com matéria prima de alta qualidade, e rigoroso controle de qualidade. São oferecidos com vários tipos de acabamento como:
 
-                            <div class="container-fluid text-start text-dark " style="font-size: 18px; ">
+                            <div class="container-fluid text-start text-dark div-span-produtos" style="font-size: 18px; ">
                                 <span>* Visores transparentes ou coloridos.</span><br>
                                 <span>* Texturização seletiva.</span><br>
                                 <span>* Impressão em quadricomia.</span><br>
                                 <span>* Alto relevo e molduras.</span>
                             </div>
                         </p>
-                        <a href="" class="btn btn-outline-danger">Saiba Mais</a>
+                        <a href="" class="btn btn-danger border-1 mb-md-5 mb-sm-1">Saiba Mais</a>
                     </div>
                     <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center ">
                         <div class="produtos-content ">
@@ -109,7 +109,7 @@
                     </div>
                     <div class="col-lg-7 col-md-12 align-self-center text-dark">
                         <p style="width: 100%;font-size: 18px;text-align: start; ">As etiquetas técnicas são peças com informações sobre operação e segurança, especificações técnicas, indicação de entradas e saídas dos equipamentos.</p>
-                        <a href="" class="btn btn-outline-danger">Saiba Mais</a>
+                        <a href="" class="btn btn-danger border-1">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -121,16 +121,16 @@
     <footer class="footer text-white pt-5 pb-4 ">
         <div class="container text-center text-md-left ">
             <div class="row text-center text-md-left ">
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
+                <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
                     <a href="# ">
                         <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
-                    <p class="w-75 ">Somos especialista em impressão Serigráfica e Silk Screen, na fabricação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
+                <div class="col-md-12 col-lg-3 col-xl-3 mx-auto  mt-3 text-start container-p-sobre">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Sobre</h5>
+                    <p class="w-75">Somos especialista em impressão Serigráfica e Silk Screen, na fabricação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
+                <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
                     <p>
                         <a class="text-white " href="produtos.html ">Teclados de Membrana</a>
@@ -142,7 +142,7 @@
                         <a class="text-white " href="produtos.html ">Etiquetas</a>
                     </p>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
+                <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
                     <a href="contato.html ">
                         <p class="text-white ">
