--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="favicon.ico">
-    <link rel="manifest" href="assets/js/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
+
     <!-- LINK ICONES -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -27,6 +23,11 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dmdmembranas.com.br/">
     <meta property="og:site_name" content="DMD - Membranas" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="favicon.ico">
+    <link rel="manifest" href="assets/json/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -233,7 +234,7 @@
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Sobre</h5>
-                    <p class="w-75">Somos especialista em impressão Serigráfica e Silk Screen, na fabicação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
+                    <p class="w-75">Somos especialista em impressão Serigráfica e Silk Screen, na fabricação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Produtos</h5>
