--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://dmdmembranas.com.br/">
     <meta property="og:site_name" content="DMD - Membranas" />
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="favicon/favicon.ico">
     <link rel="manifest" href="assets/json/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
