finalizando a página contato

--- a/contato.html
+++ b/contato.html
@@ -64,34 +64,46 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="col-md-6 text-start mb-sm-5">
-                    <h4 class="text-dark">QUE TAL CONVERSARMOS UM POUCO?</h4>
+                <div class="col-md-6 text-start text-dark mb-sm-5">
+                    <h4 class="text-danger">QUE TAL CONVERSARMOS UM POUCO?</h4>
                     <p class="text-dark">
-                        Estamos aqui para atender você, conhecer suas necessidades e responder suas dúvidas.
+                        Estamos aqui para atender você, conhecer suas necessidades e responder suas dúvidas. Faça um orçamento sem compromisso.
+                    </p>
+                    <p class="font-weight-bold h5 mb-1 mt-5">
+                        <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258 - 4708</span>
+                        <p class="mb-4">
+                            Seg. a Sex: 08hs às 17:30
+                        </p>
+                    </p>
+                    <p class="font-weight-bold h5 mb-5">
+                        <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
+                    </p>
+                    <p class="text-danger mb-5">
+                        Os campos com * são obrigatorios, para o envio do formulário.
                     </p>
                 </div>
                 <div class="col-md-6">
                     <form class="row g-3 formulario p-3">
-                        <div class="col-12">
-                            <input type="text" class="form-control" placeholder="Nome Completo" id="validationDefault01" required>
+                        <div class="col-12 mt-4">
+                            <input type="text" class="form-control" placeholder="Nome Completo *" id="validationDefault01" required>
                         </div>
                         <div class="col-12">
-                            <input type="text" class="form-control" placeholder="Nome da Empresa">
+                            <input type="text" class="form-control" placeholder="Nome da Empresa   (Opcional)">
                         </div>
 
                         <div class="col-12">
-                            <input type="number" class="form-control" placeholder="Telefône" required>
+                            <input type="number" class="form-control" placeholder="Telefône *" required>
                         </div>
                         <div class="col-12">
-                            <input type="text" class="form-control" placeholder="Email" required>
+                            <input type="text" class="form-control" placeholder="Email *" required>
                         </div>
                         <div class="col-12">
                             <textarea name="" id="" cols="20" rows="4" class="p-3 w-100"></textarea>
                         </div>
-                        <div class="d-grid gap-2 col-6 mx-auto">
-                            <button class="btn btn-primary border-0 p-2" type="submit">Enviar &nbsp;<i class="bi bi-send-fill"></i></button>
+                        <div class="d-grid gap-2 col-lg-6 col-md-12 mx-auto mb-lg-4 mb-md-3">
+                            <button class="btn btn-primary border-0 p-2 submit" type="submit">Enviar &nbsp;<i class="bi bi-send-fill"></i></button>
                         </div>
-                        <div class="d-grid gap-2 col-6 mx-auto">
+                        <div class="d-grid gap-2 col-lg-6 col-md-12  mx-auto mb-4">
                             <button class="btn btn-danger border-0 p-2" type="reset">Limpar &nbsp;<i class="bi bi-x-circle-fill"></i></button>
                         </div>
                     </form>
@@ -100,7 +112,17 @@
         </div>
     </section>
     <!--INICIO SECTION CONTATO FORMULÁRIO-->
-
+    <!--iNICIO CTA-->
+    <div class="cta cta-contato">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2 class="text-white text-center"><cite>NOSSA MAIOR SATISFAÇÃO É ATENDER BEM, PARA ATENDER SEMPRE.</cite></h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--FIM CTA-->
     <!--INICIO FOOTER-->
     <footer class="footer text-white pt-5 pb-4 ">
         <div class="container text-center text-md-left ">
