iniciando as paginas separadas do página produtos

--- a/contato.html
+++ b/contato.html
@@ -14,6 +14,20 @@
     <link rel="stylesheet" href="./assets/css/main.css">
 
     <title>DMD - Teclados de membrana</title>
+    <!-- Descrição -->
+    <meta name="description" content="Tudo o que você precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas.">
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:site_name" content="DMD - Teclados de Membrana">
+    <meta property="og:title" content="DMD Teclados de Membrana | Olá sejam bem vindos ao site da DMD Membranas, aqui você vai encontara tudo o que precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas.">
+    <meta property="og:description" content="Aqui você vai encontara tudo o que precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas, sinta-se à vontande para estar entrando em contato conosco, será um prazer atender a sua necessidade.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dmdmembranas.com.br/">
+    <meta property="og:site_name" content="DMD - Membranas" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="favicon/favicon.ico">
+    <link rel="manifest" href="assets/json/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body id="servicos">
@@ -92,7 +106,7 @@
                         </div>
 
                         <div class="col-12">
-                            <input type="number" class="form-control" placeholder="Telefône *" required>
+                            <input type="tel" class="form-control" placeholder="Telefône (DDD) *" required>
                         </div>
                         <div class="col-12">
                             <input type="text" class="form-control" placeholder="Email *" required>
