--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <title>DMD - Teclados de membrana</title>
     <!-- Descrição -->
-    <link rel="canonical" href="https://dmdmembranas.com.br/" />
+    <link rel="canonical" href="https://dmdmembranas.com.br/produtos/" />
     <meta name="description" content="Tudo o que você precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas.">
     <meta property="og:locale" content="pt_BR">
     <meta property="og:site_name" content="DMD - Teclados de Membrana">
