--- a/produtos/paineis.html
+++ b/produtos/paineis.html
@@ -11,7 +11,7 @@
     <!-- ANIMAÇÕES CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- CSS PERSONALIZADO -->
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 
     <title>DMD - Teclados de membrana</title>
     <!-- Descrição -->
@@ -35,120 +35,91 @@
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="# "><img id="logo-person" src="./assets/img/logo.png " alt="Logo MDM "></a>
+                <a class="navbar-brand" href="# "><img id="logo-person" src="../assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item mb-3">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link " href="servicos.html">Serviços</a>
+                            <a class="nav-link " href="../servicos.html">Serviços</a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link " href="produtos.html">Produtos</a>
+                            <a class="nav-link " href="../produtos.html">Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre.html">Sobre</a>
+                            <a class="nav-link" href="../sobre.html">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn-secondary-c" href="contato.html">Contato</a>
+                    <a class="btn-secondary-c" href="../contato.html">Contato</a>
                 </div>
             </div>
         </nav>
     </header>
     <!--FIM NAVBAR-->
-    <!--INICIO SECTION PRODUTOS INICIAL-->
-    <section class="inicial-sobre inicial-servicos d-flex align-items-center overflow-hidden">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 mx-auto text-center container-content-sobre">
-                    <h2 class="display-4 text-white shdw mt-5">QUALIDADE E RESPEITO</h2>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--FIM SECTION PRODUTOS INICIAL-->
     <!--INICIO SECTION PRODUTOS SECUNDARIA-->
-    <section id="section-sobre">
-        <div class="container">
-            <div class="row align-items-lg-start ">
-                <div class="col-lg-6  container-top-sobre">
-                    <h2 class="text-primary ">QUEM SOMOS</h2>
-                    <p class="text-dark text-lg-start">Somos uma empresa que busca oferecer soluções eficientes aos nossos clientes. Prezamos pela qualidade de nossos serviços e produtos. Nossa experiência acumulada ao longo dos anos e o amor pelo que fazemos nos motivam a produzir o que
-                        há de melhor em teclados de membrana, painéis frontais, circuitos flexíveis, etiquetas técnicas e peças técnicas.Estamos comprometido em fazer o melhor para proporcionar uma ótima experiência e satisfação aos nossos clientes e
-                        parceiros.
-                    </p>
+    <main>
+        <section id="section-produtos teclados-section">
+            <div class="container mt-5">
+                <div class="row">
+                    <div class="col-md-12  mb-5">
+                        <h2 class="text-white mb-2 bg-primary p-2">Painéis Frontais</h2>
+                    </div>
                 </div>
-                <div class="col-lg-6 img">
-                    <img src="assets/img/jpg/img-sobre.jpg" class="img-fluid" alt="">
+                <div class="row align-items-center">
+                    <div class="col-md-6 mb-5">
+                        <img src="../assets/img/jpg/membrana.jpg" class="img-fluid " style="width: 500px;" alt="">
+                    </div>
+                    <div class="col-md-6 text-dark">
+                        <p style="width: 100%;font-size: 18px; text-align: start; ">São peças onde estão as teclas, visores e informações necessárias para a operação do equipamento. Painéis frontais podem ser confeccionados de diversas formas, planos ou com relevo, impressão em serigrafia ou digital que permite
+                            gradiente, fotos e ilustrações, policarbonato ou poliéster, com ou sem textura seletiva,<strong class="text-danger"> Frontais para manutenção de equipamentos</strong> (fora de linha ou importados).
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="secundaria-sobre">
-        <div class="container">
-            <div class="row mt-lg-5">
-                <div class="col content-pilares">
-                    <h2 class="text-white">Estamos alicerçado em 4 pilares</h2>
-                    <p class="text-white">- Mão de obra qualificada.</p>
-                    <p class="text-white">- Materiais de alta qualidade.</p>
-                    <p class="text-white">- Preço justo e competitivo.</p>
-                    <p class="text-white">- Excelência de atendimento.</p>
+        <section class="container-img-teclados">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card">
+                            <img src="../assets/img/png/teclado1.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">ALTA QUALIDADE</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="../assets/img/png/teclado2.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">EXCENLÊNCIA DE ATENDIMENTO</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="../assets/img/png/teclado3.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">PREÇO JUSTO</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <!--FIM SECTION PRODUTOS SECUNDARIA-->
-    <!--INICIO SECTION MISSÃO VISÃO VALORES-->
-    <section class="secundaria-home overflow-hidden">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="text-primary">ESSÊNCIA</h2>
-                    <p class="mt-3 mb-4">Um pouco sobre os princípios que nos movem.</p>
-                </div>
-                <div class="row gy-4 div-cards">
-                    <div class="col-lg-4 col-md-12">
-                        <div class="service sobre-cards">
-                            <h3>Missão</h3>
-                            <div class="icon-box">
-                                <i class="bi bi-person-rolodex"></i>
-                            </div>
-                            <p>Produzir painéis de policarbonato e teclados de membrana, que permitam a interação dos usuários com o produto idealizado pelo nosso cliente.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="service sobre-cards">
-                            <h3>Visão</h3>
-                            <div class="icon-box">
-                                <i class="bi bi-bar-chart-line-fill"></i>
-                            </div>
-                            <p>Prospectar o ciclo de vida dos produtos de nosso cliente e de seus usuários, analisando a evolução da tecnologia envolvida nesse processo, os produtos similares e substitutivos e as ações dos concorrentes.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="service sobre-cards">
-                            <h3>Valor</h3>
-                            <div class="icon-box">
-                                <i class="bi bi-bookmark-star-fill"></i>
-                            </div>
-                            <p>Atender o nível de qualidade desejado pelo cliente. Superar a expectativa do cliente em termos de atributos físicos do produto, prazo de entrega, suporte técnico, assistência técnica e garantia.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--FIM SECTION MISSÃO VISÃO VALORES-->
+
     <!--INICIO FOOTER-->
     <footer class="footer text-white pt-5 pb-4 ">
         <div class="container text-center text-md-left ">
             <div class="row text-center text-md-left ">
                 <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
                     <a href="# ">
-                        <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
+                        <img src="../assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
                 <div class="col-md-12 col-lg-3 col-xl-3 mx-auto  mt-3 text-start container-p-sobre">
