--- a/produtos.html
+++ b/produtos.html
@@ -14,6 +14,20 @@
     <link rel="stylesheet" href="./assets/css/main.css">
 
     <title>DMD - Teclados de membrana</title>
+    <!-- Descrição -->
+    <meta name="description" content="Tudo o que você precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas.">
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:site_name" content="DMD - Teclados de Membrana">
+    <meta property="og:title" content="DMD Teclados de Membrana | Olá sejam bem vindos ao site da DMD Membranas, aqui você vai encontara tudo o que precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas.">
+    <meta property="og:description" content="Aqui você vai encontara tudo o que precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas, sinta-se à vontande para estar entrando em contato conosco, será um prazer atender a sua necessidade.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dmdmembranas.com.br/">
+    <meta property="og:site_name" content="DMD - Membranas" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="favicon/favicon.ico">
+    <link rel="manifest" href="assets/json/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body id="servicos">
@@ -71,7 +85,7 @@
                     <div class="col-lg-7 col-md-12 align-self-center text-dark">
                         <p style="width: 100%;font-size: 18px; text-align: start; ">Confeccionados em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Fabricados em impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.
                         </p>
-                        <a href="" class="btn btn-danger border-1 mb-md-5 mb-sm-5">Saiba Mais</a>
+                        <a href="./produtos/teclado-de-membrana.html" class="btn btn-danger border-1 mb-md-5 mb-sm-5">Saiba Mais</a>
                     </div>
                 </div>
 
@@ -89,7 +103,7 @@
                                 <span>* Alto relevo e molduras.</span>
                             </div>
                         </p>
-                        <a href="" class="btn btn-danger border-1 mb-md-5 mb-sm-1">Saiba Mais</a>
+                        <a href="./produtos/paineis.html" class="btn btn-danger border-1 mb-md-5 mb-sm-1">Saiba Mais</a>
                     </div>
                     <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center ">
                         <div class="produtos-content ">
@@ -109,7 +123,7 @@
                     </div>
                     <div class="col-lg-7 col-md-12 align-self-center text-dark">
                         <p style="width: 100%;font-size: 18px;text-align: start; ">As etiquetas técnicas são peças com informações sobre operação e segurança, especificações técnicas, indicação de entradas e saídas dos equipamentos.</p>
-                        <a href="" class="btn btn-danger border-1">Saiba Mais</a>
+                        <a href="./produtos/etiquetas.html" class="btn btn-danger border-1">Saiba Mais</a>
                     </div>
                 </div>
             </div>
